updates has added

--- a/index.html
+++ b/index.html
@@ -273,6 +273,13 @@
     <section id="products" class="ts-features pb-2">
       <div class="container">
         <div class="row">
+          <div class="col-xl-12 mb-5">
+            <div class="ts-service-box">
+              <div class="ts-service-image-wrapper expologo">
+                <img loading="lazy" width="38%"  src="images/expo.png" >
+              </div>
+            </div>
+          </div>
           <div class="col-lg-4 col-md-6 mb-5">
             <div class="ts-service-box">
               <div class="ts-service-image-wrapper">
@@ -329,6 +336,7 @@
               </div>
             </div><!-- Service3 end -->
           </div><!-- Col 3 end -->
+          
         </div><!-- Content row end -->
       </div><!-- Container end -->
     </section>
@@ -414,23 +422,6 @@
                 <p>Call us and schedule your free measurement appointment</p>
               </div>
             </div>
-            <!-- Service 1 end -->
-
-            <div class="ts-service-box d-flex">
-              <div class="ts-service-box-img">
-                <img loading="lazy" src="images/icon-image/service-icon2.png" alt="service-icon" />
-              </div>
-              <div class="ts-service-box-info">
-                <h3 class="service-box-title">
-                  <a href="#index.html">Interior Design</a>
-                </h3>
-                <p>
-                  Our 3D artists will assist you in bringing your designs to
-                  life
-                </p>
-              </div>
-            </div>
-            <!-- Service 2 end -->
 
             <div class="ts-service-box d-flex">
               <div class="ts-service-box-img">
@@ -493,75 +484,11 @@
 
         <div class="row">
           <div class="col-12">
-            <!-- <div class="shuffle-btn-group">
-              <label class="active" for="all">
-                <input type="radio" name="shuffle-filter" id="all" value="all" checked="checked" />Show All
-              </label>
-              <label for="roller-blinds">
-                <input type="radio" name="shuffle-filter" id="roller-blinds" value="roller-blinds" />Roller Blinds
-              </label>
-              <label for="vertical-blinds">
-                <input type="radio" name="shuffle-filter" id="vertical-blinds" value="vertical-blinds" />vertical blinds
-              </label>
-              <label for="motorized">
-                <input type="radio" name="shuffle-filter" id="motorized" value="motorized" />Motorized curtains and
-                blinds
-              </label>
-              <label for="fabric">
-                <input type="radio" name="shuffle-filter" id="fabric" value="fabric" />Fabric curtain
-              </label>
 
-            </div> -->
             <!-- project filter end -->
 
             <div class="row shuffle-wrapper">
               <div class="col-1 shuffle-sizer"></div>
-
-              <!-- <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
-                <div class="project-img-container">
-                  <a class="gallery-popup" href="images/projects/gallery_1.jpg" aria-label="project-img">
-                    <img class="img-fluid gallery-image" src="images/projects/gallery_1.jpg" alt="project-img" />
-                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
-                  </a>
-
-                  <div class="project-item-info">
-                    <div class="project-item-info-content">
-
-                    </div>
-                  </div>
-                </div>
-
-              </div>
-              <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
-                <div class="project-img-container">
-                  <a class="gallery-popup" href="images/projects/gallery_2.jpg" aria-label="project-img">
-                    <img class="img-fluid gallery-image" src="images/projects/gallery_2.jpg" alt="project-img" />
-                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
-                  </a>
-
-                  <div class="project-item-info">
-                    <div class="project-item-info-content">
-
-                    </div>
-                  </div>
-                </div>
-
-              </div>
-              <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
-                <div class="project-img-container">
-                  <a class="gallery-popup" href="images/projects/gallery_3.jpg" aria-label="project-img">
-                    <img class="img-fluid gallery-image" src="images/projects/gallery_3.jpg" alt="project-img" />
-                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
-                  </a>
-
-                  <div class="project-item-info">
-                    <div class="project-item-info-content">
-
-                    </div>
-                  </div>
-                </div>
-
-              </div> -->
               <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
                 <div class="project-img-container">
                   <a class="gallery-popup" href="images/projects/gallery_4.jpg" aria-label="project-img">
@@ -652,6 +579,52 @@
                 </div>
 
               </div>
+              <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
+                <div class="project-img-container">
+                  <a class="gallery-popup" href="images/projects/gallery_1.jpg" aria-label="project-img">
+                    <img class="img-fluid gallery-image" src="images/projects/gallery_1.jpg" alt="project-img" />
+                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
+                  </a>
+
+                  <div class="project-item-info">
+                    <div class="project-item-info-content">
+
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+              <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
+                <div class="project-img-container">
+                  <a class="gallery-popup" href="images/projects/gallery_2.jpg" aria-label="project-img">
+                    <img class="img-fluid gallery-image" src="images/projects/gallery_2.jpg" alt="project-img" />
+                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
+                  </a>
+
+                  <div class="project-item-info">
+                    <div class="project-item-info-content">
+
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+              <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
+                <div class="project-img-container">
+                  <a class="gallery-popup" href="images/projects/gallery_7.jpg" aria-label="project-img">
+                    <img class="img-fluid gallery-image" src="images/projects/gallery_7.jpg" alt="project-img" />
+                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
+                  </a>
+
+                  <div class="project-item-info">
+                    <div class="project-item-info-content">
+
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+              
 
             </div>
             <!-- shuffle end -->
@@ -746,8 +719,9 @@
               <h3 class="widget-title">About Us</h3>
 
               <p>
-                Shades & Blinds is new age blinds,curtains and shades design business launched by 25 years of experienced engineers & designers.
-Employing Lean Construction practices on our projects to create a better environment for our employees and partners.
+                Shades & Blinds lead by 25 Years of experienced professionals in the window fashion industry. Our
+                high-quality blinds & curtains offer excellent quality of stylish and made-to-measure window coverings
+                at affordable prices.
               </p>
               <div class="footer-social">
                 <ul>
