--- a/product/canopies.html
+++ b/product/canopies.html
@@ -18,21 +18,21 @@
     content="Shades & Blinds is one of the leading manufacturers and suppliers of premier quality blinds, internal and external shades, curtains in Dubai  ">
   <meta property="og:url" content="https://shadesandblindsme.com/">
   <meta property="og:site_name" content="Shades & Blinds">
-  <link rel="icon" type="image/png" href="images/favicon.jpeg" />
+  <link rel="icon" type="image/png" href="/images/favicon.jpeg" />
   <link rel="dns-prefetch" href="//fonts.googleapis.com">
   <!-- Bootstrap -->
-  <link rel="stylesheet" href="plugins/bootstrap/bootstrap.min.css" />
+  <link rel="stylesheet" href="/plugins/bootstrap/bootstrap.min.css" />
   <!-- FontAwesome -->
-  <link rel="stylesheet" href="plugins/fontawesome/css/all.min.css" />
+  <link rel="stylesheet" href="/plugins/fontawesome/css/all.min.css" />
   <!-- Animation -->
-  <link rel="stylesheet" href="plugins/animate-css/animate.css" />
+  <link rel="stylesheet" href="/plugins/animate-css/animate.css" />
   <!-- slick Carousel -->
-  <link rel="stylesheet" href="plugins/slick/slick.css" />
-  <link rel="stylesheet" href="plugins/slick/slick-theme.css" />
+  <link rel="stylesheet" href="/plugins/slick/slick.css" />
+  <link rel="stylesheet" href="/plugins/slick/slick-theme.css" />
   <!-- Colorbox -->
-  <link rel="stylesheet" href="plugins/colorbox/colorbox.css" />
+  <link rel="stylesheet" href="/plugins/colorbox/colorbox.css" />
   <!-- Template styles-->
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="/css/style.css" />
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-213156373-1"></script>
   <script>
@@ -93,10 +93,10 @@
                     text-center text-lg-left
                     mb-3  mb-lg-0
                   ">
-                <a class="d-block logoText" href="index.html">
+                <a class="d-block logoText" href="/index.html">
                   <div class="logoDiv">
                     Shades & Blinds
-                    <img loading="lazy" src="images/logo.jpeg" alt="ShadeAndBlides" />
+                    <img loading="lazy" src="/images/logo.jpeg" alt="ShadeAndBlides" />
                     الستائر والستائر
                   </div>
                 </a>
@@ -138,28 +138,28 @@
                 </button>
 
                 <div id="navbar-collapse" class="collapse navbar-collapse">
-                  <ul class="nav navbar-nav mr-auto">
-                    <li class="nav-item dropdown ">
-                      <a href="index.html" class="nav-link">Home</a>
-                    </li>
-
-                    <li class="nav-item">
-                      <a class="nav-link" href="about.html#about">About us</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="index.html#products">Products</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="index.html#ts-service-area">Services</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="index.html#project-area">Gallery</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="index.html#main-container">Contact</a>
-                    </li>
-                  </ul>
-                </div>
+                    <ul class="nav navbar-nav mr-auto">
+                      <li class="nav-item dropdown ">
+                        <a href="/index.html" class="nav-link">Home</a>
+                      </li>
+  
+                      <li class="nav-item">
+                        <a class="nav-link" href="/about.html#about">About us</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="/index.html#products">Products</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="/index.html#ts-service-area">Services</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="/index.html#project-area">Gallery</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="/index.html#main-container">Contact</a>
+                      </li>
+                    </ul>
+                  </div>
               </nav>
             </div>
             <!--/ Col end -->
@@ -174,18 +174,19 @@
             0deg,
             rgb(21 11 11 / 38%),
             rgb(27 21 21 / 44%)
-          ),url(images/banner/banner1.jpg)">
+          ),url(/images/banner/banner1.jpg)">
       <div class="banner-text">
         <div class="container">
           <div class="row">
             <div class="col-lg-12">
               <div class="banner-heading">
-                <h1 class="banner-title">Internal Shades</h1>
+                <h1 class="banner-title">Canopies</h1>
                 <nav aria-label="breadcrumb">
                   <ol class="breadcrumb justify-content-center">
-                    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                    <li class="breadcrumb-item"><a href="index.html#products">Products</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">Internal Shades</li>
+                    <li class="breadcrumb-item"><a href="/index.html">Home</a></li>
+                    <li class="breadcrumb-item"><a href="/index.html#products">Products</a></li>
+                    <li class="breadcrumb-item"><a href="/externalshades.html">External Shades</a></li>
+                    <li class="breadcrumb-item active" aria-current="page">Canopies</li>
                   </ol>
                 </nav>
               </div>
@@ -201,172 +202,47 @@
       <div class="container">
         <div class="row text-center">
           <div class="col-lg-12">
-            <p>Our Blinds are highly efficient, versatile and at the same time incredibly stylish and beautifully
-              designed. At shades & Blinds we make your space look fresh and modern. Our window blinds elevate your home
-              or office ambiance and provide great comfort. We have a huge collection of internal shades and curtains
-              that we can even customize as per your desire.
-
-              We design and manufacture every major style of blinds which include Roller Blinds, Venetian Blinds, Wooden
-              Blinds, Vertical Blinds, Roman Blinds, and Zebra Blinds in Dubai and Abu Dhabi. These are available in
-              both motorized and manual versions.</p>
+            <p>These models are built to measure according to either cardboard/crush-proof material templates, or measurement system as indicated to the side. We can provide them in different shapes, colours and sizes based on the outdoor applications.</p>
           </div>
         </div>
 
-        <div class="row">
+        <div class="row mt-5">
           <div class="col-12">
-            <div class="shuffle-btn-group">
-              <label class="active" for="all">
-                <input type="radio" name="shuffle-filter" id="all" value="all" checked="checked" />Show All
-              </label>
-              <label for="blinds">
-                <input type="radio" name="shuffle-filter" id="blinds" value="blinds" />Blinds
-              </label>
-              <label for="curtains">
-                <input type="radio" name="shuffle-filter" id="curtains" value="curtains" />Curtains
-              </label>
-
-            </div>
-
+        
             <div class="row shuffle-wrapper">
               <div class="col-1 shuffle-sizer"></div>
 
-              <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["blinds"]'>
+              <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
                 <div class="project-img-container">
-                  <a class="gallery-popup" aria-label="project-img">
-                    <img class="img-fluid gallery-image" src="images/projects/gallery_4.jpg" alt="project-img" />
+                  <a class="gallery-popup" href="/images/projects/external/13.jpg" aria-label="project-img">
+                    <img class="img-fluid gallery-image" src="/images/projects/external/13.jpg" alt="project-img" />
+                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
                   </a>
 
                   <div class="project-item-info">
                     <div class="project-item-info-content">
-                      <h3 class="project-item-title">
-                        <a href="product/rollerblinds.html">Roller blinds</a>
-                      </h3>
+
                     </div>
                   </div>
                 </div>
 
               </div>
-
-
-
-              <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["blinds"]'>
+              <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
                 <div class="project-img-container">
-                  <a class="gallery-popup" aria-label="project-img">
-                    <img class="img-fluid gallery-image" src="images/projects/internal/3.jpg" alt="project-img" />
+                  <a class="gallery-popup" href="/images/projects/external/16.jpg" aria-label="project-img">
+                    <img class="img-fluid gallery-image" src="/images/projects/external/16.jpg" alt="project-img" />
+                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
                   </a>
 
                   <div class="project-item-info">
                     <div class="project-item-info-content">
-                      <h3 class="project-item-title">
-                        <a href="product/woodenvenetian.html">Wooden Venetians</a>
-                      </h3>
+
                     </div>
                   </div>
                 </div>
 
               </div>
-
-              <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["blinds"]'>
-                <div class="project-img-container">
-                  <a class="gallery-popup" aria-label="project-img">
-                    <img class="img-fluid gallery-image" src="images/projects/internal/4.jpg" alt="project-img" />
-                  </a>
-
-                  <div class="project-item-info">
-                    <div class="project-item-info-content">
-                      <h3 class="project-item-title">
-                        <a href="product/verticalblinds.html">Vertical blinds</a>
-                      </h3>
-                    </div>
-                  </div>
-                </div>
-
-              </div>
-
-              <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["blinds"]'>
-                <div class="project-img-container">
-                  <a class="gallery-popup" aria-label="project-img">
-                    <img class="img-fluid gallery-image" src="images/projects/gallery_7.jpg" alt="project-img" />
-                  </a>
-
-                  <div class="project-item-info">
-                    <div class="project-item-info-content">
-                      <h3 class="project-item-title">
-                        <a href="product/romenblinds.html">Roman Blinds</a>
-                      </h3>
-                    </div>
-                  </div>
-                </div>
-
-              </div>
-
-              <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["blinds"]'>
-                <div class="project-img-container">
-                  <a class="gallery-popup" aria-label="project-img">
-                    <img class="img-fluid gallery-image" src="images/projects/internal/6.jpg" alt="project-img" />
-                  </a>
-
-                  <div class="project-item-info">
-                    <div class="project-item-info-content">
-                      <h3 class="project-item-title">
-                        <a href="product/woodenshutter.html">Wooden Shutter</a>
-                      </h3>
-                    </div>
-                  </div>
-                </div>
-
-              </div>
-
-              <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["blinds"]'>
-                <div class="project-img-container">
-                  <a class="gallery-popup" aria-label="project-img">
-                    <img class="img-fluid gallery-image" src="images/projects/gallery_6.jpg" alt="project-img" />
-                  </a>
-
-                  <div class="project-item-info">
-                    <div class="project-item-info-content">
-                      <h3 class="project-item-title">
-                        <a href="product/zebrarollerblinds.html">Zebra Roller Blinds</a>
-                      </h3>
-                    </div>
-                  </div>
-                </div>
-
-              </div>
-
-              <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["curtains"]'>
-                <div class="project-img-container">
-                  <a class="gallery-popup" aria-label="project-img">
-                    <img class="img-fluid gallery-image" src="images/projects/gallery_10.jpg" alt="project-img" />
-                  </a>
-
-                  <div class="project-item-info">
-                    <div class="project-item-info-content">
-                      <h3 class="project-item-title">
-                        <a href="product/curtians.html">Curtains</a>
-                      </h3>
-                    </div>
-                  </div>
-                </div>
-
-              </div>
-              <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["curtains"]'>
-                <div class="project-img-container">
-                  <a class="gallery-popup" aria-label="project-img">
-                    <img class="img-fluid gallery-image" src="images/projects/internal/13.jpg" alt="project-img" />
-                  </a>
-
-                  <div class="project-item-info">
-                    <div class="project-item-info-content">
-                      <h3 class="project-item-title">
-                        <a href="product/cubiclecurtians.html">Cubicle Curtains</a>
-                      </h3>
-                    </div>
-                  </div>
-                </div>
-
-              </div>
-
+              
             </div>
             <!-- shuffle end -->
           </div>
@@ -389,9 +265,7 @@
               <h3 class="widget-title">About Us</h3>
 
               <p>
-                Shades & Blinds lead by 25 Years of experienced professionals in the window fashion industry. Our
-                high-quality blinds & curtains offer excellent quality of stylish and made-to-measure window coverings
-                at affordable prices.
+                Shades & Blinds lead by 25 Years of experienced professionals in the window fashion industry. Our high-quality blinds & curtains offer excellent quality of stylish and made-to-measure window coverings at affordable prices.
               </p>
               <div class="footer-social">
                 <ul>
@@ -426,14 +300,14 @@
             <div class="col-lg-3 col-md-6 mt-5 mt-lg-0 footer-widget">
               <h3 class="widget-title">Services</h3>
               <ul class="list-arrow">
-                <li><a href="index.html#ts-service-area">Free Measurement</a></li>
-                <li><a href="index.html#ts-service-area">Interior Design</a></li>
+                <li><a href="/index.html#ts-service-area">Free Measurement</a></li>
+                <li><a href="/index.html#ts-service-area">Interior Design</a></li>
                 <li>
-                  <a href="index.html#ts-service-area">Delivery and installation</a>
+                  <a href="/index.html#ts-service-area">Delivery and installation</a>
                 </li>
-                <li><a href="index.html#ts-service-area">Manufacturing</a></li>
+                <li><a href="/index.html#ts-service-area">Manufacturing</a></li>
                 <li>
-                  <a href="index.html#ts-service-area">Free consultation</a>
+                  <a href="/index.html#ts-service-area">Free consultation</a>
                 </li>
               </ul>
             </div>
@@ -462,12 +336,12 @@
             <div class="col-md-6">
               <div class="footer-menu text-center text-md-right">
                 <ul class="list-unstyled">
-                  <li><a href="index.html">Home</a></li>
-                  <li><a href="about.html#about">Aboutus</a></li>
-                  <li><a href="index.html#products">Products</a></li>
-                  <li><a href="index.html#ts-service-area">Service</a></li>
-                  <li><a href="index.html#project-area">Gallery</a></li>
-                  <li><a href="index.html#main-container">Contact</a></li>
+                  <li><a href="/index.html">Home</a></li>
+                  <li><a href="/about.html#about">Aboutus</a></li>
+                  <li><a href="/index.html#products">Products</a></li>
+                  <li><a href="/index.html#ts-service-area">Service</a></li>
+                  <li><a href="/index.html#project-area">Gallery</a></li>
+                  <li><a href="/index.html#main-container">Contact</a></li>
                 </ul>
               </div>
             </div>
@@ -486,21 +360,21 @@
     </footer>
 
     <!-- initialize jQuery Library -->
-    <script src="plugins/jQuery/jquery.min.js"></script>
+    <script src="/plugins/jQuery/jquery.min.js"></script>
     <!-- Bootstrap jQuery -->
-    <script src="plugins/bootstrap/bootstrap.min.js" defer></script>
+    <script src="/plugins/bootstrap/bootstrap.min.js" defer></script>
     <!-- Slick Carousel -->
-    <script src="plugins/slick/slick.min.js"></script>
-    <script src="plugins/slick/slick-animation.min.js"></script>
+    <script src="/plugins/slick/slick.min.js"></script>
+    <script src="/plugins/slick/slick-animation.min.js"></script>
     <!-- Color box -->
-    <script src="plugins/colorbox/jquery.colorbox.js"></script>
+    <script src="/plugins/colorbox/jquery.colorbox.js"></script>
     <!-- shuffle -->
-    <script src="plugins/shuffle/shuffle.min.js" defer></script>
+    <script src="/plugins/shuffle/shuffle.min.js" defer></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"
       integrity="sha512-IsNh5E3eYy3tr/JiX2Yx4vsCujtkhwl7SLqgnwLNgf04Hrt9BT9SXlLlZlWx+OK4ndzAoALhsMNcCmkggjZB1w=="
       crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="js/script.js"></script>
+    <script src="/js/script.js"></script>
   </div>
   <!-- Body inner end -->
 </body>
