--- a/smart.html
+++ b/smart.html
@@ -295,8 +295,9 @@
                             <h3 class="widget-title">About Us</h3>
 
                             <p>
-                                Shades & Blinds is new age blinds,curtains and shades design business launched by 25 years of experienced engineers & designers.
-Employing Lean Construction practices on our projects to create a better environment for our employees and partners.
+                                Shades & Blinds lead by 25 Years of experienced professionals in the window fashion industry. Our
+                high-quality blinds & curtains offer excellent quality of stylish and made-to-measure window coverings
+                at affordable prices.
 
                             </p>
                             <div class="footer-social">
