updates has added

--- a/index.html
+++ b/index.html
@@ -275,8 +275,8 @@
         <div class="row">
           <div class="col-xl-12 mb-5">
             <div class="ts-service-box">
-              <div class="ts-service-image-wrapper expologo">
-                <img loading="lazy" width="38%"  src="images/expo.png" >
+              <div class="ts-service-image-wrapper expologo" style='display: flex; justify-content: center;'>
+                <img loading="lazy"   src="images/expo.png" >
               </div>
             </div>
           </div>
