images has removed

--- a/product/zebrarollerblinds.html
+++ b/product/zebrarollerblinds.html
@@ -244,7 +244,7 @@
 
               </div>
 
-              <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
+              <!-- <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
                 <div class="project-img-container">
                   <a class="gallery-popup" href="/images/projects/internal/16.jpg" aria-label="project-img">
                     <img class="img-fluid gallery-image" src="/images/projects/internal/16.jpg" alt="project-img" />
@@ -258,7 +258,7 @@
                   </div>
                 </div>
 
-              </div>
+              </div> -->
 
 
               
